# whoreirc

./: .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS.adoc  CMakeLists.txt  ChangeLog.adoc  Contributing.adoc  Makefile.am  README.adoc  ReleaseNotes.adoc  autogen.sh  config.h.cmake  configure.ac  version.sh  weechat.cygport.in  weechat.pc.in  weechat.spec  whoreirc.cygport.in  whoreirc.pc.in
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
cmake/: FindAsciidoctor.cmake  FindAspell.cmake  FindCppUTest.cmake  FindGCRYPT.cmake  FindGettext.cmake  FindGnuTLS.cmake  FindGuile.cmake  FindIconv.cmake  FindLua.cmake  FindNcurses.cmake  FindPHP.cmake  FindPerl.cmake  FindPython.cmake  FindRuby.cmake  FindTCL.cmake  FindV8.cmake  cmake_uninstall.cmake.in
debian-devel/: control  weechat-devel-doc.doc-base.dev-en  weechat-devel-doc.doc-base.dev-fr  weechat-devel-doc.doc-base.dev-ja  weechat-devel-doc.doc-base.faq-de  weechat-devel-doc.doc-base.faq-en  weechat-devel-doc.doc-base.faq-fr  weechat-devel-doc.doc-base.faq-it  weechat-devel-doc.doc-base.faq-ja  weechat-devel-doc.doc-base.faq-pl  weechat-devel-doc.doc-base.plugin-en  weechat-devel-doc.doc-base.plugin-fr  weechat-devel-doc.doc-base.plugin-it  weechat-devel-doc.doc-base.plugin-ja  weechat-devel-doc.doc-base.quickstart-de  weechat-devel-doc.doc-base.quickstart-en  weechat-devel-doc.doc-base.quickstart-es  weechat-devel-doc.doc-base.quickstart-fr  weechat-devel-doc.doc-base.quickstart-it  weechat-devel-doc.doc-base.quickstart-ja  weechat-devel-doc.doc-base.quickstart-pl  weechat-devel-doc.doc-base.quickstart-ru  weechat-devel-doc.doc-base.relay-protocol-en  weechat-devel-doc.doc-base.relay-protocol-fr  weechat-devel-doc.doc-base.relay-protocol-ja  weechat-devel-doc.doc-base.scripting-de  weechat-devel-doc.doc-base.scripting-en  weechat-devel-doc.doc-base.scripting-fr  weechat-devel-doc.doc-base.scripting-it  weechat-devel-doc.doc-base.scripting-ja  weechat-devel-doc.doc-base.scripting-pl  weechat-devel-doc.doc-base.tester-de  weechat-devel-doc.doc-base.tester-en  weechat-devel-doc.doc-base.tester-fr  weechat-devel-doc.doc-base.tester-it  weechat-devel-doc.doc-base.tester-ja  weechat-devel-doc.doc-base.tester-pl  weechat-devel-doc.doc-base.user-de  weechat-devel-doc.doc-base.user-en  weechat-devel-doc.doc-base.user-fr  (+5 more)
debian-stable/: NEWS  changelog  control  copyright  watch  weechat-core.install  weechat-curses.install  weechat-curses.links  weechat-curses.menu  weechat-dev.dirs  weechat-dev.install  weechat-doc.doc-base.dev-en  weechat-doc.doc-base.dev-fr  weechat-doc.doc-base.dev-ja  weechat-doc.doc-base.faq-de  weechat-doc.doc-base.faq-en  weechat-doc.doc-base.faq-fr  weechat-doc.doc-base.faq-it  weechat-doc.doc-base.faq-ja  weechat-doc.doc-base.faq-pl  weechat-doc.doc-base.plugin-en  weechat-doc.doc-base.plugin-fr  weechat-doc.doc-base.plugin-it  weechat-doc.doc-base.plugin-ja  weechat-doc.doc-base.quickstart-de  weechat-doc.doc-base.quickstart-en  weechat-doc.doc-base.quickstart-es  weechat-doc.doc-base.quickstart-fr  weechat-doc.doc-base.quickstart-it  weechat-doc.doc-base.quickstart-ja  weechat-doc.doc-base.quickstart-pl  weechat-doc.doc-base.quickstart-ru  weechat-doc.doc-base.relay-protocol-en  weechat-doc.doc-base.relay-protocol-fr  weechat-doc.doc-base.relay-protocol-ja  weechat-doc.doc-base.scripting-de  weechat-doc.doc-base.scripting-en  weechat-doc.doc-base.scripting-fr  weechat-doc.doc-base.scripting-it  weechat-doc.doc-base.scripting-ja  (+26 more)
doc/: CMakeLists.txt  Makefile.am  docgen.py
doc/cs/: CMakeLists.txt  Makefile.am  cmdline_options.cs.adoc  man_copyright.cs.adoc  man_files.cs.adoc  man_plugin_options.cs.adoc  weechat-headless.1.cs.adoc  weechat.1.cs.adoc  weechat_quickstart.cs.adoc
doc/de/: CMakeLists.txt  Makefile.am  cmdline_options.de.adoc  man_copyright.de.adoc  man_files.de.adoc  man_plugin_options.de.adoc  weechat-headless.1.de.adoc  weechat.1.de.adoc  weechat_faq.de.adoc  weechat_quickstart.de.adoc  weechat_scripting.de.adoc  weechat_tester.de.adoc  weechat_user.de.adoc
doc/en/: CMakeLists.txt  Makefile.am  cmdline_options.en.adoc  man_copyright.en.adoc  man_files.en.adoc  man_plugin_options.en.adoc  weechat-headless.1.en.adoc  weechat.1.en.adoc  weechat_dev.en.adoc  weechat_faq.en.adoc  weechat_plugin_api.en.adoc  weechat_quickstart.en.adoc  weechat_relay_protocol.en.adoc  weechat_scripting.en.adoc  weechat_tester.en.adoc  weechat_user.en.adoc
doc/es/: CMakeLists.txt  Makefile.am  weechat_quickstart.es.adoc
doc/fr/: CMakeLists.txt  Makefile.am  (+14 more)
doc/it/: CMakeLists.txt  Makefile.am  cmdline_options.it.adoc  man_copyright.it.adoc  man_files.it.adoc  man_plugin_options.it.adoc  weechat-headless.1.it.adoc  weechat.1.it.adoc  weechat_faq.it.adoc  weechat_plugin_api.it.adoc  weechat_quickstart.it.adoc  weechat_scripting.it.adoc  weechat_tester.it.adoc  weechat_user.it.adoc
doc/it/autogen/user/: sec_options.adoc  weechat_commands.adoc
doc/ja/: CMakeLists.txt  Makefile.am  cmdline_options.ja.adoc  man_copyright.ja.adoc  man_files.ja.adoc  man_plugin_options.ja.adoc  weechat-headless.1.ja.adoc  weechat.1.ja.adoc  weechat_dev.ja.adoc  weechat_faq.ja.adoc  weechat_plugin_api.ja.adoc  weechat_quickstart.ja.adoc  weechat_relay_protocol.ja.adoc  weechat_scripting.ja.adoc  weechat_tester.ja.adoc  weechat_user.ja.adoc
doc/ja/autogen/user/: sec_options.adoc  weechat_commands.adoc
doc/pl/: CMakeLists.txt  Makefile.am  cmdline_options.pl.adoc  man_copyright.pl.adoc  man_files.pl.adoc  man_plugin_options.pl.adoc  weechat-headless.1.pl.adoc  weechat.1.pl.adoc  weechat_faq.pl.adoc  weechat_quickstart.pl.adoc  weechat_scripting.pl.adoc  weechat_tester.pl.adoc  weechat_user.pl.adoc
doc/pl/autogen/user/: sec_options.adoc  weechat_commands.adoc
po/: CMakeLists.txt  Makevars  POTFILES.in  cs.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  pl.po  pt.po  pt_BR.po  ru.po  srcfiles.cmake  tr.po  weechat.pot
src/: CMakeLists.txt  Makefile.am
tests/: CMakeLists.txt  Makefile.am  tests.cpp  tests.h
tools/: build-debian.sh  build-test.sh  git-version.sh  makedist.sh
(+467 files in other folders)
